[project]
name = "pubic_dn42_network_gen_tools"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "InPRTx", email = "inprtx@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
